# WebSocketCpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  WebSocketBinary.cpp  WebSocketClient.cpp  WebSocketPingPong.cpp  WebSocketServer.cpp  WebSocketTicTacToe.cpp  example_common.h
examples/public/: WebSocketBinary.html  WebSocketPingPong.html  WebSocketServer.html  WebSocketTicTacToe.html
include/: Config.h  Header.h  HttpHeader.h  Request.h  RequestBody.h  RequestWebSocket.h  Response.h  ResponseWebSocket.h  Route.h  RouteWebSocket.h  Session.h  Url.h  WebSocketClient.h  WebSocketServer.h
include/common/: IDataHandler.h  IErrorable.h  IRunnable.h  common.h  common_ws.h
include/conn/: CommunicationClientBase.h  CommunicationServerBase.h  CommunicationSslClient.h  CommunicationSslServer.h  CommunicationTcpClient.h  CommunicationTcpServer.h  ICommunication.h  ICommunicationClient.h  ICommunicationServer.h
include/utils/: ClientSocket.h  Data.h  DebugPrint.h  FileSystem.h  LogWriter.h  ServerSocket.h  Sha1.h  StringUtil.h
src/: Config.cpp  Header.cpp  HttpHeader.cpp  Request.cpp  RequestBody.cpp  RequestWebSocket.cpp  Response.cpp  ResponseWebSocket.cpp  Route.cpp  RouteWebSocket.cpp  Session.cpp  Url.cpp  WebSocketClient.cpp  WebSocketServer.cpp  common.cpp
src/conn/: CommunicationClientBase.cpp  CommunicationServerBase.cpp  CommunicationSslClient.cpp  CommunicationSslServer.cpp  CommunicationTcpClient.cpp  CommunicationTcpServer.cpp  (+2 more)
tests/: CMakeLists.txt  websocketcpp_memory_pool_test.cpp  websocketcpp_request_test.cpp  websocketcpp_route_test.cpp  websocketcpp_server_client_socket_test.cpp  websocketcpp_test.cpp  websocketcpp_thread_pool_test.cpp  websocketcpp_url_test.cpp
(+26 files in other folders)
